cluster/apps/manyfold/manyfold/valkey.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: manyfold
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:9.0.4-alpine@sha256:d1cc70645bbcef743615463a2fa4616e841407545e18f560aed0c49671a90147
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 30
            periodSeconds: 2
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 3
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: manyfold
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 6379
      port: 6379
      protocol: TCP
  selector:
    app: valkey
