cluster/apps/manyfold/manyfold/manyfold.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold
  namespace: manyfold
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: manyfold
  template:
    metadata:
      labels:
        app: manyfold
    spec:
      containers:
        - name: manyfold
          image: ghcr.io/manyfold3d/manyfold:0.137.0@sha256:d60367fdd4e58730e4a1aaeee68d39279459ee1973d53309460aab97db7d6590
          ports:
            - containerPort: 3214
          volumeMounts:
            - name: models
              mountPath: /models
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: manyfold-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: manyfold
  namespace: manyfold
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 3214
      port: 3214
      protocol: TCP
  selector:
    app: manyfold
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manyfold
  namespace: manyfold
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: manyfold.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manyfold
                port:
                  number: 3214
  tls:
    - hosts:
        - manyfold.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: manyfold-tls
